this is only a test

--- a/src/main/webapp/html/test.html
+++ b/src/main/webapp/html/test.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1> this is a test! Hello!</h1>
+<h1>Hello! This is a test of commit on new branch development!</h1>
 </body>
 </html>
