--- a/src/main/webapp/html/Login.html
+++ b/src/main/webapp/html/Login.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-
 <div class="content">
     <div class="block">
         <h1>Login</h1>
-        <form action="LoginControl" method="post" id="formLogin">
+        <form action="../LoginControl" method="post" id="formLogin">
             <div class="components">
                 <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required onkeyup="checkEmail()"><br>
                 <span id="rsEmail"></span>
