Adding Upload.jsp, Home.jsp, Header.jsp, Header.css. Creating Footer.css, Footer.html. Fixing index.jsp.

--- a/src/main/webapp/html/Registrazione.html
+++ b/src/main/webapp/html/Registrazione.html
@@ -11,7 +11,7 @@
 <body>
 <div class="block">
     <h1>Registrazione</h1>
-    <form action="../RegistrazioneControl" method="post" id="Registrazione">
+    <form action="/RegistrazioneControl" method="post" id="Registrazione">
         <div class="form">
             <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required onkeyup="checkEmail()"><br>
             <span id="rsEmail"></span>
