--- a/src/main/webapp/html/Login.html
+++ b/src/main/webapp/html/Login.html
@@ -13,18 +13,18 @@
 <div class="content">
     <div class="block">
         <h1>Login</h1>
-        <form action="../LoginControl" method="post" id="formLogin">
+        <form action="/LoginControl" method="post" id="formLogin">
             <div class="components">
                 <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required onkeyup="checkEmail()"><br>
                 <span id="rsEmail"></span>
                 <input type="password" id="password" name="password" placeholder="Password" required>
             </div>
-            <div class="components-button" style="margin-top: 50px;">
+            <div class="components-button">
                 <input type="submit" value="Accedi" id="Accedi">
             </div>
         </form>
         <div class="components">
-            <a href="./Recupero">Recupero Password</a>
+            <a href="/Recupero">Recupero Password</a>
         </div>
         <img src="../img/Logo Team 4-5.png">
     </div>
