Adding Profilo.jsp and Profilo.css. Fixing Home.jsp.

--- a/src/main/webapp/html/Login.html
+++ b/src/main/webapp/html/Login.html
@@ -13,7 +13,7 @@
 <div class="content">
     <div class="block">
         <h1>Login</h1>
-        <form action="/LoginControl" method="post" id="formLogin">
+        <form action="../LoginControl" method="post" id="formLogin">
             <div class="components">
                 <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required onkeyup="checkEmail()"><br>
                 <span id="rsEmail"></span>
@@ -24,7 +24,7 @@
             </div>
         </form>
         <div class="components">
-            <a href="/Recupero">Recupero Password</a>
+            <a href="../Recupero">Recupero Password</a>
         </div>
         <img src="../img/Logo Team 4-5.png">
     </div>
