Updating CreateTeam.jsp, Profilo.jsp, Home.jsp. Creating Error.html and styling it in Common.css. Moving Home.jsp and fixing its dispatchers in LoginControl.java

--- a/src/main/webapp/static/Login.html
+++ b/src/main/webapp/static/Login.html
@@ -24,7 +24,7 @@
             </div>
         </form>
         <div class="components">
-            <a href="../Recupero">Recupero Password</a>
+            <a href="Error.html">Recupero Password</a>
         </div>
         <img src="../img/Logo Team 4-5.png">
     </div>
