--- a/src/main/webapp/static/Registrazione.html
+++ b/src/main/webapp/static/Registrazione.html
@@ -5,10 +5,14 @@
     <script type="text/javascript" src="../js/ConvalidazioneCampi.js"></script>
     <link rel="icon" type="image/png" href="../img/Logo Team 4-5.png"/>
     <link rel="stylesheet" href="../css/Registrazione.css"/>
+    <link rel="stylesheet" href="../css/HomePage.css">
     <meta charset="ISO-8859-1">
     <title>Registrazione</title>
 </head>
-<body>
+<body class="background-reg">
+<script>
+    document.write('<a href="' + document.referrer + '"><div class="back"> </div></a>');
+</script>
 <div class="block">
     <h1>Registrazione</h1>
     <form action="../RegistrazioneControl" method="post" id="Registrazione">
