Fixing the back icon in Login.html and Registrazione.html

--- a/src/main/webapp/static/Registrazione.html
+++ b/src/main/webapp/static/Registrazione.html
@@ -11,9 +11,9 @@
 </head>
 <body class="background-reg">
 <script>
-    document.write('<a href="' + document.referrer + '"><div class="back"> </div></a>');
+    document.write('<a href="' + document.referrer + '"><div class="back"><img src="../img/Back.png"> </div></a>');
 </script>
-<div class="block">
+<div class="reg-block">
     <h1>Registrazione</h1>
     <form action="../RegistrazioneControl" method="post" id="Registrazione">
         <div class="form">
