--- a/src/main/webapp/static/Login.html
+++ b/src/main/webapp/static/Login.html
@@ -4,16 +4,15 @@
     <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="../js/ConvalidazioneCampi.js"></script>
     <link rel="icon" type="image/png" href="../img/Logo Team 4-5.png"/>
-    <link rel="stylesheet" href="../css/Login.css">
     <link rel="stylesheet" href="../css/HomePage.css">
     <meta charset="ISO-8859-1">
     <title>Login</title>
 </head>
 <body class="background-login">
 <script>
-    document.write('<a href="' + document.referrer + '"><div class="back"> </div></a>');
+    document.write('<a href="' + document.referrer + '"><div class="back"><img src="../img/Back.png"></div></a>');
 </script>
-    <div class="block content">
+    <div class="login-block content">
         <h2>Login</h2>
         <form action="../LoginControl" method="post" id="formLogin">
             <div class="components">
