Refactoring Error.html into Error.jsp, leading to Dispatchers' change in every Control.

--- a/src/main/webapp/static/Login.html
+++ b/src/main/webapp/static/Login.html
@@ -25,7 +25,7 @@
         </div>
     </form>
     <div class="components">
-        <a href="Error.html">Recupero Password</a>
+        <a href="Error.jsp">Recupero Password</a>
     </div>
     <script>
         document.write('<a href="' + document.referrer + '"><div class="back">Torna alla Home</div></a>');
