--- a/src/main/webapp/static/Login.html
+++ b/src/main/webapp/static/Login.html
@@ -16,12 +16,13 @@
     <h2>Login</h2>
     <form action="../LoginControl" method="post" id="formLogin">
         <div class="components">
-            <input type="email" id="email" name="email" placeholder="Email" required onkeyup="checkEmail()"><br>
+            <input type="text" id="email" name="email" placeholder="Email" onkeyup="checkEmail()"><br>
             <span id="rsEmail"></span>
-            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" id="password" name="password" placeholder="Password" onkeyup="checkPassword()">
+            <span id="rsPassword"></span>
         </div>
         <div class="components-button">
-            <input type="submit" value="Accedi" id="Accedi">
+            <input type="submit" value="Accedi" id="Accedi" onclick="checkEmail();checkPassword()">
         </div>
     </form>
     <div class="components">
